data/derived/fa15/progs/unify/prog0103.ml.out
Characters 47-56:
  let rec clone x n = if n <= 0 then [] else x::(clone x n-1);;
                                                 ^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
